package it.matlice.ingsw.data;

/**
 * la classe rappresenta un utente con privilegi di configurazione
 */
public abstract class ConfiguratorUser extends User {
}
