package it.matlice.ingsw.data.impl.jdbc.types;

import it.matlice.ingsw.data.impl.jdbc.CategoryDB;

public interface CategoryImpl {
    CategoryDB getDbData();
}
