@startuml

skinparam ClassAttributeIconSize 0
'skinparam groupInheritance 2
skinparam linetype ortho
hide empty members

interface PasswordAuthenticable

package data #FFFFFF {
    abstract class ConfiguratorUser
    abstract class NodeCategory
    abstract class LeafCategory
    abstract class Hierarchy

    interface UserFactory
    interface CategoryFactory
    interface HierarchyFactory

    package impl.sqlite #FFFFFF {
        
        class CategoryDB {
            - father: CategoryDB | null
            - categoryId: int
            - categoryName: String
        }

        class HierarchyDB {
            - hierarchyId: int
        }

        class UserDB {
            - username: String
            - password_hash: String
            - password_salt: String
            - type: String
        }

        class UserFactoryImpl implements UserFactory {}
        class HierarchyFactoryImpl extends HierarchyFactory
        class CategoryFactoryImpl extends CategoryFactory

        package types #FFFFFF {
            interface CategoryImpl {
                + getDBData(): CategoryDB
            }

            class NodeCategoryImpl extends NodeCategory implements CategoryImpl
            class LeafCategoryImpl extends LeafCategory implements CategoryImpl
            class ConfiguratorUserImpl extends ConfiguratorUser implements PasswordAuthenticable
            class HierarchyImpl extends Hierarchy
        }

    }

}

UserFactoryImpl ..> ConfiguratorUserImpl: creates >
HierarchyFactoryImpl ..> HierarchyImpl: creates >
CategoryFactoryImpl ..> CategoryImpl: creates >

CategoryImpl -up-> "1" CategoryDB
ConfiguratorUserImpl -up-> "1" UserDB
HierarchyImpl -up-> "1" HierarchyDB

HierarchyDB --> "1" CategoryDB: root

CategoryImpl -right[hidden]- HierarchyImpl
HierarchyImpl -right[hidden]- ConfiguratorUserImpl
HierarchyImpl -down[hidden]--- Hierarchy

CategoryDB -right[hidden]- CategoryImpl
HierarchyDB -down[hidden]- CategoryDB
HierarchyFactoryImpl -right[hidden]- UserFactoryImpl
CategoryFactoryImpl -right[hidden]- HierarchyFactoryImpl

'CategoryDB -right[hidden]- HierarchyDB
'HierarchyDB -right[hidden]- UserDB

LeafCategoryImpl -down[hidden]-- LeafCategory
NodeCategoryImpl -down[hidden]-- NodeCategory
ConfiguratorUserImpl -down[hidden]--- ConfiguratorUser

ConfiguratorUserImpl -down[hidden]--- PasswordAuthenticable


@enduml